--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -39,6 +39,6 @@
       </span>
     </footer>
   </div>
-
+    <script src="js/ratings.js"></script>
 </body>
 </html>
